# IBO

./: CMakeLists.txt  Makefile  demo.py  run_tests.sh
cpp/: CMakeLists.txt  Makefile  direct.cpp  direct.h  main.cpp  optimizeGP.cpp  optimizeRF.cpp
ego/: unittest_GP.py  unittest_IBO.py  unittest_RF.py
ego/acquisition/: __init__.py  gallery.py  prefutil.py
ego/gaussianprocess/: __init__.py  kernel.py  prior.py  trainhyper.py
ego/randomforest/: __init__.py
ego/utils/: optimize.py  testfunctions.py
